tests/diagnostics/catalog/snapshots/ir/IR0028.snap
error[IR0028]: IR_E_INVALID_BORROW
 --> tests/diagnostics/catalog/sources/ir/IR0028.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0028
  = help: keep IR validation diagnostics structured and catalog-backed
